--- a/IntroductionToPython/01-Introduction.ipynb
+++ b/IntroductionToPython/01-Introduction.ipynb
@@ -7,13 +7,13 @@
    "source": [
     "# Introduction\n",
     "\n",
-    "Effective programming involves combining problem solving skills, domain knowledge, and then programming skills.  The goal of these notebooks is not necessarily to teach you Python, but rather how you can solve problems and perform tasks with computer programs. These notebooks will target each of these different areas.\n",
+    "Effective programming combines problem solving skills, domain knowledge, and then programming skills - these notebooks will target each of these different areas.  The overall goal, though, is not necessarily to teach you Python, but rather how you can solve problems and perform tasks with computer programs.\n",
     "\n",
-    "As you learn to program, realize that learning to program is not a passive activity.  You can't simply just read documentation and these notebooks.  It will take targeted practice and that practice takes times.  These notebooks will present fundamental concepts and then how those concepts are implemented in Python as well as how you can solve real problems with those concepts.  These notebooks contain a large number of sample code.  Not only should you run this could, you should also make changes to the code and see what happens.  Don't be afraid to make mistakes - try things!.  The computer doesn't care and won't make fun of you.  You should complete the exercises at the end of each notebook.  Yes, we have provided the answers.  However, you will really learn by attempting the exercises on your own.  These exercises have also been written to reinforce the concepts presented.\n",
+    "As you learn to program, realize that learning to program is not a passive activity.  You can not simply just read documentation and these notebooks.  It will take targeted practice and that practice takes times.  These notebooks will present fundamental concepts and then how those concepts are implemented in Python as well as how you can solve real problems with those concepts.  These notebooks contain a large number of sample code.  Not only should you run this code, you should also make changes to the code and see what happens.  Don't be afraid to make mistakes - try things!.  The computer doesn't care and won't make fun of you.  You should complete the exercises at the end of each notebook.  Yes, we have provided the answers.  However, you will really learn by attempting the exercises on your own. We have written these exercises to reinforce the concepts presented.\n",
     "\n",
-    "In the next notebook, we'll present an approach to solve problems with programming.  The key principle with this approach is understand what occurs and then how we can translate that into a series of steps.  And most importantly, to plan how to implement that approach before you start writing code. \n",
+    "The next notebook presents an approach to solve problems with programming.  The key principle with this approach is understand what occurs and then how we can translate that into a series of steps.  And most importantly, to plan how to implement that approach before you start writing code. Once we have the steps (our approach), we can then write code.  As you perform this process, you should have a scratch pad handy to take notes and record your thoughts.\n",
     "\n",
-    "To start, this notebook contains three separate programs to demonstrate some of the potential of computer programs as well as some fundamental concepts within computer science. As this is also one of the first Python programs you might have seen, we'll provide a detailed explanation of each step.\n"
+    "To start our journey to learn computer programming through Python, this notebook contains three separate programs to demonstrate some of the potential of computer programs as well as some fundamental concepts within computer science. As these are some of the first Python programs you might have seen, we will provide a detailed explanation of each step.\n"
    ]
   },
   {
@@ -68,16 +68,16 @@
    "source": [
     "While you may be new to programming, hopefully you could see a little bit how the previous code block worked. In command mode for the previous cell, type <kbd class=\"key-l\">l</kbd></span> to see line numbers.\n",
     "\n",
-    "* lines 1 and 2 let the program use the webbrowser and json libraries.  The webbrowser library lets us open a new browser window with a given URL (line 17).  [JSON](https://www.json.org/) has become one of the standards for exchanging data through internet-based APIs. We'll cover JSON in more detail as the course progresses. \n",
-    "* line 3 allows us to use the the `urlopen()` method from the `urllib.request` module.\n",
+    "* lines 1 and 2 let the program use the webbrowser and json libraries.  The webbrowser library lets us open a new browser window with a given URL (line 16).  [JSON](https://www.json.org/) has become one of the standards for exchanging data through internet-based APIs. We'll cover JSON in more detail as the course progresses. \n",
+    "* line 3 allows us to use the the `urlopen()` method from the `urllib.request` module. (One of Python's advantages is the large number of included standard libraries and available 3rd party open-source libraries.)\n",
     "* line 5 prints a message to the console telling the user what the program will do\n",
     "* line 6 allows the user to type in the URL for a particular website.  For this example, I used `http://irishwildcat.com`, an old blog that's no longer available on the Internet.\n",
     "* line 7 gets a date in a particular format starting with the year, month, and then day.  This representation is based off an international standard - [ISO-8601](https://en.wikipedia.org/wiki/ISO_8601)\n",
     "* line 8 creates a variable called `url` to point to a location on Wayback Machine at https://archive.org/\n",
     "* line 9 opens a connection to that url on archive.org and places the result into the variable `response`\n",
     "* line 10 then reads the text output from that connection, placing the output into the variable `contents`\n",
-    "* line 11 converts the contents of the text variable (which contains a JSON object) to a Python dictionary.  A dictionary stores data in key-value pairs - we'll give this in much greater detail a few notebooks from now.\n",
-    "* In lines 12-18, we execute a block of code in a special region.  If any Python errors occur, the error will be caught and  the user will be shown the message from line 19.\n",
+    "* line 11 converts the contents of the text variable (which contains a JSON object) to a Python dictionary.  A dictionary stores data in key-value pairs - we will give this in much greater detail a few notebooks from now.\n",
+    "* In lines 12-18, we execute a block of code in a special region.  If any Python errors occur, the error will be caught and  the user will be shown the message in line 18.\n",
     "* line 13 grabs a specific URL from the results of the Wayback Machine.\n",
     "* line 14 prints that URL\n",
     "* line 15 tells the user that we will be opening that URL in a new browser window.\n",
@@ -236,12 +236,12 @@
    "id": "719596d2",
    "metadata": {},
    "source": [
-    "## Sample Program: Traveling Salesman and Solvability\n",
+    "## Sample Program: Traveling Salesperson and Solvability\n",
     "The lecture slides presented computer science as being concerned with asking if a particular problem can be solved and if it is solvable, how expensive is it to solve.\n",
     "\n",
-    "One of the most well-studied problems in computer science is the [travelling salesperson problem](https://en.wikipedia.org/wiki/Travelling_salesman_problem).  Suppose a salesperson has to visit $n$  cities and return back to that starting point.  What is the shortest route that visits each city exactly once?\n",
+    "One of the most well-studied problems in computer science is the [traveling salesperson problem](https://en.wikipedia.org/wiki/Travelling_salesman_problem).  Suppose a salesperson has to visit $n$  cities and return back to that starting point.  What is the shortest route that visits each city exactly once?\n",
     "\n",
-    "The brute-force method would be to try all possible [permutations](https://en.wikipedia.org/wiki/Permutation) of the city ordering. Suppose we had 3 cities, the following possibilities exits:\n",
+    "The brute-force method would be to try all possible [permutations](https://en.wikipedia.org/wiki/Permutation) of the city ordering. Suppose we had 3 cities, the following possibilities exist:\n",
     "- City 1, City 2, City 3\n",
     "- City 1, City 3, City 2\n",
     "- City 2, City 1, City 3\n",
