--- a/IntroductionToPython/01.5-ProblemSolvingByProgramming.ipynb
+++ b/IntroductionToPython/01.5-ProblemSolvingByProgramming.ipynb
@@ -10,9 +10,9 @@
     "\n",
     "One of the great satisfactions with computer programming is the ability to solve real-world tasks - especially when others can use our creations.\n",
     "\n",
-    "One approach to creating programs is to apply procedural programming.  In this paradigm, programmers create a list of instructions that computers must perform in order to solve a particular problem or perform a specific task.  For right now, we just consider short programs - as the course progresses, our programs will become larger and we will adopt more techniques to approach these problems.\n",
+    "One approach to creating programs is to apply procedural programming.  In this paradigm, programmers create a list of instructions that computers must perform in order to solve a particular problem or perform a specific task.  For right now, we just consider small programs - as the course progresses, our programs will become larger and we will adopt more techniques to approach these problems.\n",
     "\n",
-    "In the [Introductory Notebook](01-Introduction.ipynb), the first task was to open a webpage from the wayback machine.  Suppose instead that you were asked to find the homepage from [The News&Observer](https://www.newsobserver.com/) from November 11th, 2018.  One way to begin to a create an algorithm for this process is to utilize \"The Seven Steps\" [1] (The following description is inspired by \"All of Programming\" by Drew Hilton and Anne Bracy.)\n",
+    "In the [Introductory Notebook](01-Introduction.ipynb), the first task was to open a web page from the Wayback Machine.  Suppose instead that you were asked to find the homepage from [The News&Observer](https://www.newsobserver.com/) from November 11th, 2018.  One way to begin to a create an algorithm for this process is to utilize \"The Seven Steps\" [1] (The following description is inspired by \"All of Programming\" by Drew Hilton and Anne Bracy.)\n",
     "\n",
     "![](images/sevensteps.png)\n",
     "\n"
@@ -41,7 +41,7 @@
     "\n",
     "Step Three involves generalizing our steps.  Our initial solution works for a specific site and date, but also requires manual intervention.  We need to research ways to programmatically access this way. Often, sites provide an [application programming interface (API)](https://en.wikipedia.org/wiki/API#Web_APIs) as way to access data. Perform web search on \"wayback machine api\" leads to this page: https://archive.org/help/wayback_api.php. In reading this page, we see that the Wayback Machine has an API endpoint with URLs that following this example: https://archive.org/wayback/available?url=example.com&timestamp=20060101\n",
     "\n",
-    "In other situations, you'll need to research the problem domain to gain a deeper understand of what's occurring and how you can automate something."
+    "In other situations, you will need to research the problem domain to gain a deeper understand of what's occurring and how you can automate something."
    ]
   },
   {
@@ -70,20 +70,20 @@
    "id": "be97dc85",
    "metadata": {},
    "source": [
-    "In Step Four, we then manually perform the steps to ensure we have a correct, working algorithm.  This example is relatively straightforward, but in more complex situations we'll want to have at least some assurance here that our approach is sound. For all but the simplest situations, it is impossible to determine how many test cases are required: tests can demonstrate that defects exist, but they can not prove that defects exists.  Such proof requires formal verification using models and logic that can be reasoned upon.  Hardware manufacturers are probably the leading use of formal verification in industry, but widespread use among software developers is practically nonexistent. As we discuss testing in later notebooks,  we'll look at different ways to quantify the appropriate amount of testing required. \n",
+    "### In Step Four, we then manually perform the steps to ensure we have a correct, working algorithm.  This example is relatively straightforward, but in more complex situations we'll want to have at least some assurance here that our approach is sound. For all but the simplest situations, it is impossible to determine how many test cases are required: tests can demonstrate that defects exist, but they can not prove that defects exists.  Such proof requires formal verification using models and logic that can be reasoned upon.  Hardware manufacturers are probably the leading use of formal verification in industry, but widespread use among software developers is practically nonexistent. As we discuss testing in later notebooks,  we will look at different ways to quantify the appropriate amount of testing required. \n",
     "\n",
-    "Side Note: One of the fundamental questions within Computer Science has been whether or not it can be proved that for an arbitrary program will it halt for a given input.  Known as the [Halting Problem](https://en.wikipedia.org/wiki/Halting_problem), this problem has been used a the basis to show that equivalent problems are equivalent to it, and hence improvable.  Proving the absence of all defects is one such problem.\n",
+    "Side Note: One of the fundamental questions within Computer Science has been whether or not it can be proved that for an arbitrary program will it halt for a given input.  Known as the [Halting Problem](https://en.wikipedia.org/wiki/Halting_problem), this problem has been used a the basis to show that problems are equivalent to it, and hence unsolvable.  Proving the absence of all defects is one such problem.\n",
     "\n",
-    "The goal of these first four steps is to have performed sufficient planning to minimize possibly misteps as we then convert our steps into computer code and test that code.  Often, you will here this referred to as \"design\".  Our \"requirement\" was to develop a routine to search the wayback machine for a particular URL and date, and then to open a web browswer with the closest URL available in the archive.  \n",
+    "The goal of these first four steps is to have performed sufficient planning to minimize and eliminate as we then convert our steps into computer code and test that code.  Often, you will here this referred to as \"design\".  Our \"requirement\" was to develop a routine to search the Wayback Machine for a particular URL and date, and then to open a web browser with the closest URL available in the archive.  \n",
     "\n",
     "From a documentation perspective, the expected outcome should contain:\n",
     "* Inputs to the routine\n",
     "* Outputs from the routine \n",
     "* Pseudocode (steps in the routine)\n",
     "\n",
-    "This \"outcome\" is basis of an *algorithm*, which is a well-defined procedure (series of steps) that takes some input and produces some value or set of values (output).[3]\n",
+    "This \"outcome\" is basis of an *algorithm*, which is a well-defined procedure (series of steps) that takes some input and produces some value or set of values (output).[2]\n",
     "\n",
-    "Pseudocode Guidelines: [2]\n",
+    "Pseudocode Guidelines: [3]\n",
     "* Use natural language statements that precisely describe specific operations\n",
     "* Avoid syntactic elements from the target programming language\n",
     "* Write pseudocode at the level of intent - document the approach to solve the problem\n",
@@ -99,7 +99,7 @@
     "\n",
     "In Step 6, we then run and test the program to see if it works.  If all of our tests pass, we are complete.  If we find issues, then we need to debug our program (Step 7) to find and correct those issues, which we'll fix be going back to Step 5.\n",
     "\n",
-    "As you increase your coding skills, much of this process will become second nature and you can minimize/combine steps. However you should always spend an appropriate amount of time planning out your solution.  For easier problems, this can just be a few scribbles or notes.  For more complex problems and large systems, you will spend a substantial amount of time performing research to figure our the best approach and then creating documentation for that approach."
+    "As you increase your coding skills, much of this process will become second nature and you can minimize/combine steps. However you should always spend an appropriate amount of time planning out your solution.  For easier problems, this can just be a few scribbles or notes.  For more complex problems and large systems, you will spend a substantial amount of time performing research to figure out the best approach and then creating documentation for that approach."
    ]
   },
   {
@@ -110,23 +110,15 @@
     "## References\n",
     "[1] Andrew D. Hilton, Genevieve M. Lipp, and Susan H. Rodger. 2019. _Translation from Problem to Code in Seven Steps_. In Proceedings of the ACM Conference on Global Computing Education (CompEd '19). Association for Computing Machinery, New York, NY, USA, 78–84. https://doi-org.prox.lib.ncsu.edu/10.1145/3300115.3309508\n",
     "\n",
-    "[2] Steve McConnell. 2004. _Code Complete_, Second Edition. Microsoft Press, USA.\n",
+    "[2] Thomas H. Cormen, Charles E. Leiserson, Ronald L. Rivest, and Clifford Stein. 2009. _Introduction to Algorithms_, Third Edition (3rd. ed.). The MIT Press.\n",
     "\n",
-    "[3] Thomas H. Cormen, Charles E. Leiserson, Ronald L. Rivest, and Clifford Stein. 2009. _Introduction to Algorithms_, Third Edition (3rd. ed.). The MIT Press.\n"
+    "[3] Steve McConnell. 2004. _Code Complete_, Second Edition. Microsoft Press, USA."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc7d1d80",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "58bab7df",
+   "id": "85fcadb5",
    "metadata": {},
    "outputs": [],
    "source": []
