--- a/IntroductionToPython/02-Types,Values,Variables,Names.ipynb
+++ b/IntroductionToPython/02-Types,Values,Variables,Names.ipynb
@@ -7,7 +7,8 @@
    "source": [
     "# Data:Types, Values, Variables, and Names\n",
     "\n",
-    "A computer program is a series of instructions that operate on data.  There are a number of building blocks you'll need to understand how to combine and manipulate to build effective programs.\n",
+    "A computer program is a series of instructions that operate on data. To build effective programs, you will need to understand\n",
+    "a number of building blocks and then how to combine and manipulate those blocks.\n",
     "\n",
     "Another way to look at programming is to consider Lego bricks.  \n",
     "![Legos](images/lego_bricks.jpg)\n",
@@ -35,7 +36,7 @@
     "- an identity (something that uniquely identifies that item).\n",
     "\n",
     "To help manage these objects, Python also tracks:\n",
-    "- an object's type - this defines what an object can do\n",
+    "- an object's type - this defines what an object can do and data is stores\n",
     "- a reference count that tracks how many references exist to that particular object.\n",
     "\n",
     "Many other programming langauges have the concept of a primitive type, which simply contains a particular value.\n",
@@ -49,6 +50,8 @@
    "metadata": {},
    "source": [
     "## Types\n",
+    "(TODO: this table is overwhelming to someone who has never programmed)\n",
+    "\n",
     "The following table shows the basic types in Python:\n",
     "\n",
     "| **Name**       | **Type**  | **Mutable?** | **Examples**                                                                                               |\n",
@@ -57,7 +60,7 @@
     "| Integer        | int       | no           | 42, 17966, 17_966                                                                                          |\n",
     "| Floating point | float     | no           | 3.14159, 2.7e5                                                                                             |\n",
     "| Complex        | complex   | no           | 3j, 5+ 9j                                                                                                  |\n",
-    "| Text string    | str       | no           | 'duke',\"University\", '''a multiline string'''                                                              |\n",
+    "| Text string    | str       | no           | 'Duke',\"University\", '''a multiline string'''                                                              |\n",
     "| List           | list      | yes          | [\"Duke\", \"NC State\", \"Notre Dame\", \"UNC\"]                                                                  |\n",
     "| Tuple          | tuple     | no           | (2,5,8)                                                                                                    |\n",
     "| Bytes          | bytes     | no           | b'ab\\xff'                                                                                                  |\n",
@@ -213,7 +216,7 @@
    "source": [
     "### Variable Naming Rules\n",
     "As you name a variable, you should create names that represent the purpose of that variable. The variable name must also follow these rules:\n",
-    "- can only contain lowercase letters (a-z), uppercase letters (A-Z), digites (0-9), and an underscore(_)\n",
+    "- can only contain lowercase letters (a-z), uppercase letters (A-Z), digits (0-9), and an underscore(_)\n",
     "- can not begin with a digit\n",
     "- can not be one of Python's reserved keywords.\n",
     "\n",
@@ -241,7 +244,7 @@
     "```\n",
     "g = 3600\n",
     "```\n",
-    "in the preceding code block?  Would you be able to figure out the purpose and meaning of g?"
+    "in the preceding code block?  Would you be able to figure out the purpose and meaning of g?  What happens if you came back to the code a year from now?"
    ]
   },
   {
@@ -267,9 +270,9 @@
    "id": "28053138-3670-4741-949f-c2a01c10e80f",
    "metadata": {},
    "source": [
-    "To see more information about a particular keyword, type help(\"keywordName\").  Try looking a couple of different keywords.  \n",
+    "Don't worry if the output (the list of keywords) does not yet make sense, we will cover most of these keywords in this class.\n",
     "\n",
-    "Don't worry if the output (the list of keywords) does not yet make sense, we will cover most of these keywords in this class."
+    "To see more information about a particular keyword, type help(\"_keywordName_\").  Try looking a couple of different keywords.  "
    ]
   },
   {
@@ -301,7 +304,7 @@
     "## Objects Redux\n",
     "To circle back to the start of this notebook, we mentioned that all data in Python are managed as objects.  As such, we typically have ways to inspect the state of a particular object as well as to execute methods on those objects.\n",
     "\n",
-    "While the data types shown in this notebook have relatively simple states (ie, just the value of the integer, float, or string datatype).  These values do have additional behavior defined.\n",
+    "While the data types shown in this notebook have relatively simple states (i.e., just the value of the integer, float, or string datatype).  These values do have additional behavior defined.\n",
     "\n",
     "Integer values are typically represented as [binary numbers](https://en.wikipedia.org/wiki/Binary_number) witin a computer's memory.  To see how long a particular representation is (i.e., how many zeros and ones are needed), we can call the ```bit_length()``` method on an integer."
    ]
@@ -346,7 +349,7 @@
    "id": "88cd4993",
    "metadata": {},
    "source": [
-    "As you examine the output for ```dir(int)```, you'll notice a number of methods begin and end with double underscores.  Referred to as \"dunder\" methods, these methods serve either special functions within P Python (initialize an object ```__init__```, produce a string representation of an object ```__str__```,...) or override built-in functions and operators (abs() ```__abs__```, = ```__eq__```, etc.)\n",
+    "As you examine the output for ```dir(int)```, you'll notice a number of methods begin and end with double underscores.  Referred to as \"dunder\" methods, these methods serve either special functions within Python (initialize an object ```__init__```, produce a string representation of an object ```__str__```,...) or override built-in functions and operators (abs() ```__abs__```, = ```__eq__```, etc.)\n",
     "\n",
     "To get help on a particular method, we can use the ```help()``` method.  For these, we'll need to pass either an object reference or the type name along with the method we want help for)"
    ]
@@ -411,14 +414,6 @@
     "4. x and X are treated as the same variable identifier in Python.  (True/False)\n",
     "5. What does a variable's type tell us?"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2d4e337c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -437,7 +432,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
