--- a/IntroductionToPython/03-Boolean,Numbers,Operations.ipynb
+++ b/IntroductionToPython/03-Boolean,Numbers,Operations.ipynb
@@ -27,7 +27,7 @@
    "id": "080a793f",
    "metadata": {},
    "source": [
-    "Boolean is the simplest data type in Python as the only possible values are ```True``` and ```False```.  However, Boolean values are widely used throughout most programming languages.  We can create variables to hold one of these values directly, but will also implicitly use this type as the result of conditional expressions to evaluate whether or not something is true or false.  Typically, these results will be used in control (```if```) and loop (```while```) statements.\n",
+    "Boolean is the simplest data type in Python as the only possible values are ```True``` and ```False```.  However, Boolean values are widely used throughout most programming languages.  We can create variables to hold one of these values directly, but will also implicitly use this type as the result of conditional expressions to evaluate whether or not something is true or false.  Typically, these results will be used in control ```if``` and loop ```while``` statements.\n",
     "\n",
     "Use Python's built-in function ```bool()``` to convert other data types to Boolean.  Any non-zero value will be considered ```True``` and any zero / empty value will be considered ```False```.\n",
     "\n",
@@ -150,7 +150,7 @@
     "### Integer Bases\n",
     "Integers are generally represented in programs as base 10 (decimal) numbers.  The *base* is the number of digits that a system of counting uses to represent numbers.  \n",
     "\n",
-    "Behind the scenes, computers largely rely upon sequences of bits (zeros and ones) to represent values.  As humans, we rely upon abstractions to make sense of those sequences.  There are three base representations that are often used within computer science and you may use or see these representations in your code or elsewhere.\n",
+    "Behind the scenes, computers utilize sequences of bits (zeros and ones) to represent values.  As humans, we rely upon abstractions to make sense of those sequences.  There are three base representations that are often used within computer science and you may use or see these representations in your code or elsewhere.\n",
     "\n",
     "For Python, we can express literal integers in the following 3 basis in addition to decimal by using specific prefixes:\n",
     "- 0b or 0B for *binary* (base 2).  Digits: 0, 1\n",
@@ -952,7 +952,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
