--- a/IntroductionToPython/04-BasicInputAndOutput.ipynb
+++ b/IntroductionToPython/04-BasicInputAndOutput.ipynb
@@ -8,7 +8,7 @@
     "# Basic Input and Output\n",
     "Programs that don't alter their input based upon any type of input are really quite boring - they'll just keep doing the same thing, time and time again.  A program's usefulness increases exponentially with the input the code can receive and process.\n",
     "\n",
-    "With the exception of the code presented in first module, we have not received any input.  If we need to change the behavior of the program, we have had to change the program.  \n",
+    "With the exception of the code presented in first module, we have not received any input.  If we need to change the behavior of the program, we need to change the program.  \n",
     "\n",
     "In this Python notebook, we'll present a basic mechanism to get input from the console (aka the user's keyboard). From a technical standpoint, this is considered \"standard input\" / \"stdin\", which we'll examine later in this course."
    ]
@@ -23,7 +23,7 @@
     "\n",
     "[Python documentation for input](https://docs.python.org/3/library/functions.html#input)\n",
     "\n",
-    "```input()``` takes an optional argument, which is the prompt to the user and this is written to standard output without a trailing newline.  ```input()``` will pause the program execution and wait for the user to enter a value and then type the enter key.  The return character is stripped from the result.  The result is of type string.\n",
+    "```input()``` takes an optional argument, which is the prompt to the user.  This prompt is written to the console / screen (\"standard output\" / \"stdout\") without a trailing newline.  ```input()``` will pause the program execution and wait for the user to enter a value and then type the enter key.  The return character is stripped from the result.  The result is of type string.\n",
     "\n"
    ]
   },
@@ -85,9 +85,9 @@
     "\n",
     "One thing to notice is that in the first input value, we first assigned the value to a variable containing a string, and then converted that to another variable containing an int.  For the second input value, we directly converted the input string to an integer without using an intermediary value.  \n",
     "\n",
-    "Beginners might find the first pattern more comforting as one can see more explicitly what occurs (and it's also a little easier when debugging programs to see values.  We'll discuss debugging when we discuss IDEs (specifically Visual Code).  However, most advanced programmers will tend to use the second pattern as the code is shorter.\n",
+    "Beginners might find the first pattern more comforting as one can see more explicitly what occurs (and it's also a little easier when debugging programs to see values.  We'll discuss debugging when we discuss IDEs (specifically Visual Studio Code).  However, most advanced programmers will tend to use the second pattern as the code is shorter.\n",
     "\n",
-    "Now what happen's if we ask the user to enter a number, but they enter a string instead?"
+    "Now what occurs if we ask the user to enter a number, but they enter a string instead?"
    ]
   },
   {
@@ -132,7 +132,7 @@
    "id": "2e04b83a",
    "metadata": {},
    "source": [
-    "While all our examples with ```print()``` have used a single argument, we can pass multiple variables and literal values to the function.  Additional, we can override defaults for the separator value used between passed values, the string appended after the last value, where the output goes (sys.stdout) and whether or not flush - forcibly make the stream write the passed output values."
+    "While all our examples with ```print()``` have used a single argument, we can pass multiple variables and literal values to the function.  Additionally, we can override defaults for the separator value used between passed values, the string appended after the last value, where the output goes (sys.stdout) and whether or not flush - forcibly make the stream write the passed output values."
    ]
   },
   {
@@ -209,7 +209,7 @@
     "To separate logical blocks of code, you can use blank lines, which Python ignores.  Additionally, you can use space characters before and after operators, keywords, and variables to make code easier to read.\n",
     "\n",
     "### Splitting Lengthy Statements\n",
-    "[By convention](https://peps.python.org/pep-0008/#maximum-line-length), the maximum length for python lines of code is 79 characters. This allows for several files to be opened side by side as well as using code review tools that present two versions in adjacent comments.  Some teams may chose to adopt a longer standard.\n",
+    "[By convention](https://peps.python.org/pep-0008/#maximum-line-length), the maximum suggested length for python lines of code is 79 characters. This allows for several files to be opened side by side as well as using code review tools that present two versions in adjacent comments.  Some teams may chose to adopt a longer standard.\n",
     "\n",
     "To spread a length statement over several lines, end each line that needs to be continued with a ```\\```.\n",
     "\n",
@@ -229,8 +229,7 @@
     "                 4 + \\\n",
     "                 5\n",
     "print(\"Here is the sum of numbers -\",\n",
-    "      sum_of_numbers)\n",
-    "\n"
+    "      sum_of_numbers)"
    ]
   },
   {
@@ -553,7 +552,9 @@
    "cell_type": "code",
    "execution_count": 23,
    "id": "1389f6ce",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -649,14 +650,6 @@
     "## References\n",
     "[1] Andrew D. Hilton, Genevieve M. Lipp, and Susan H. Rodger. 2019. _Translation from Problem to Code in Seven Steps_. In Proceedings of the ACM Conference on Global Computing Education (CompEd '19). Association for Computing Machinery, New York, NY, USA, 78–84. https://doi-org.prox.lib.ncsu.edu/10.1145/3300115.3309508"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a965fdf3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
