--- a/IntroductionToPython/05-Control.ipynb
+++ b/IntroductionToPython/05-Control.ipynb
@@ -29,7 +29,7 @@
     "- Rectangles are used to represent one or more operations that occur in sequence. *process*\n",
     "- Diamonds represent a condition operation to choose which path a program or process will follow. *decision*\n",
     "- Arrows represent the process's (or program's) order of operation.  Labels may indicate decision paths.  *flowline*\n",
-    "- Parallegorams (not shown) represent the process of inputting and outputting data.\n",
+    "- Parallelograms (not shown) represent the process of data input and output.\n",
     "As necessary, you can augment these diagrams with whatever notes, variable changes, etc. to help document a given process."
    ]
   },
@@ -183,7 +183,24 @@
    "id": "712c0fe4",
    "metadata": {},
    "source": [
-    "In Python, indention determines the code blocks that execute for the `if` statement.  The Python convention is to use four spaces.  However, you can use any amount of spaces that you like as long as you are consistent with the spacing.  Avoid using tabs or mixing tabs and spaces - this will lead to issues with being consistent."
+    "In Python, indention determines the code blocks that execute for the `if` statement.  The Python convention is to use four spaces.  However, you can use any amount of spaces that you like as long as you are consistent with the spacing.  Avoid using tabs or mixing tabs and spaces - this will lead to consistency issues.  \n",
+    "\n",
+    "As you write programs, you'll need to make sure your code blocks are properly indented -"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cc215c0d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "age = 17\n",
+    "if age >= 16:\n",
+    "    print(\"You can drive!\")\n",
+    "else:\n",
+    "    print(\"You are not old enough to drive.\")\n",
+    "print(\"You will need to wait until you are 16.\")  #oops, didn't indent this properly"
    ]
   },
   {
@@ -211,7 +228,7 @@
     "    print(\"B\")\n",
     "elif grade >= 70:\n",
     "    print(\"C\")\n",
-    "elif grade >= 70:\n",
+    "elif grade >= 60:\n",
     "    print(\"D\")\n",
     "else:\n",
     "    print(\"F\") "
@@ -239,7 +256,7 @@
     "    print(\"B\")\n",
     "elif grade >= 90:\n",
     "    print(\"A\")\n",
-    "elif grade >= 70:\n",
+    "elif grade >= 60:\n",
     "    print(\"D\")\n",
     "else:\n",
     "    print(\"F\") "
@@ -338,11 +355,21 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4daa59c9",
+   "metadata": {},
+   "source": [
+    "_Your world has just turned upside down._\n",
+    "\n",
+    "![](images/pirates_black_pearl_upside_down.jpg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "34c8a108",
    "metadata": {},
    "source": [
     "## Short-Circuit Evaluation\n",
-    "As with most other programming languages, the `and` and `or` operators utilize [short-circuit evaluation](https://en.wikipedia.org/wiki/Short-circuit_evaluation).\n",
+    "As with most other programming languages, the `and` and `or` operators utilize [short-circuit evaluation](https://en.wikipedia.org/wiki/Short-circuit_evaluation) - once Python can determine the outcome of a Boolean expression, the interpreter no longer needs to continue evaluation.\n",
     "\n",
     "For `and`, if the first expression evaluates to `False`, the second expression will not be evaluated as the  result of the operator will always be `False`. \n",
     "\n",
@@ -439,7 +466,7 @@
    "id": "ddc3f9a8",
    "metadata": {},
    "source": [
-    "Multiple `and` and `or` clauses can be used in the same expression.  You will want to use paranthesis to ensure the correct order of operations / logical meaning."
+    "Multiple `and` and `or` clauses can be used in the same expression.  Use parenthesis to ensure the correct order of operations / logical meaning."
    ]
   },
   {
@@ -602,7 +629,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
