--- a/IntroductionToPython/06-Functions.ipynb
+++ b/IntroductionToPython/06-Functions.ipynb
@@ -8,9 +8,9 @@
     "# Functions\n",
     "Most of the Python code that you have seen and written in these notebooks have been small fragments.  In some cases, these fragments can produce interesting and useful results such as computing compound interest.  However, it does not make any sense to constantly copy and paste these fragments into other programs.  Fortunately, Python provides a mechanism to organize these code blocks into a cohesive unit - the function.  We've already seen and used many of the built-in Python functions (`int`, `float`, `print`, `input`, `type`, `help`, `dir`), now we'll develop our own in this notebook.\n",
     "\n",
-    "Functions are a named, resusable block of code.  They can take any number of parameters to send data into the function.  Functions can then return any number of results back to the calling block.\n",
+    "Functions are a named, reusable block of code.  They can take any number of parameters to send data into the function.  Functions can then return any number of results back to the calling block.\n",
     "\n",
-    "As you use functions within your prograam, two fundamental concepts exist:\n",
+    "As you use functions within your program, two fundamental concepts exist:\n",
     "1. Defining (declaring) the function.  This provides the function's definition: the name, parameters, and functionality.  In many other programming languages, you'll need to explicitly state the function's return type.\n",
     "2. Calling the function.  As we call (execute) a function, we pass a specific list of arguments to be used as the values for a function's parameters.\n"
    ]
@@ -91,7 +91,7 @@
     "## Function naming rules\n",
     "Function names follow the same rules as variables:\n",
     "\n",
-    "- can only contain lowercase letters (a-z), uppercase letters (A-Z), digites (0-9), and an underscore(_)\n",
+    "- can only contain lowercase letters (a-z), uppercase letters (A-Z), digits (0-9), and an underscore(_)\n",
     "- can not begin with a digit\n",
     "- can not be one of Python's reserved keywords.\n",
     "\n",
@@ -100,19 +100,6 @@
     "Similarly, you should create meaningful names that communicate the purpose of the function.\n",
     "\n",
     "Python's naming conventions have underscores separating words versus using camelCase present in other languages like Java.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7401305e",
-   "metadata": {},
-   "source": [
-    "## Returning Values\n",
-    "To return a value from a function, use the `return` keyword followed by the appropriate value or variable. \n",
-    "\n",
-    "If the function exits (reaches the bottom of the function) without a return value, `None` is explicitly returned. \n",
-    "\n",
-    "The `None` keyword is used to define a null value (or no value at all).  None is not the same as 0, False, or an empty string.  None does have its own type of \"NoneType\".  "
    ]
   },
   {
@@ -142,6 +129,19 @@
     "    return a+b\n",
     "print(add_numbers(5,6))\n",
     "print(add_numbers(1968,2001))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7401305e",
+   "metadata": {},
+   "source": [
+    "## Returning Values\n",
+    "To return a value from a function, use the `return` keyword followed by the appropriate value or variable. \n",
+    "\n",
+    "If the function exits (reaches the bottom of the function) without a return value, `None` is explicitly returned. \n",
+    "\n",
+    "The `None` keyword is used to define a null value (or no value at all).  None is not the same as 0, False, or an empty string.  None does have its own type of \"NoneType\".  "
    ]
   },
   {
@@ -316,10 +316,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "b0d5dad4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on function multiple in module __main__:\n",
+      "\n",
+      "multiple(a, b)\n",
+      "    Returns the result of multiplying a and b\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "def multiple(a,b):\n",
     "    \"\"\"Returns the result of multiplying a and b \"\"\"\n",
@@ -418,7 +430,7 @@
     "1. Built-in.  Contains the names and references for all of Python's built-in objects (which includes functions!). \n",
     "2. Global. Contains any names defined at the main level of a program.  This namespace is automatically created when the Python interpreter starts and exists until the interpreter terminates. The variables we create outside of functions, and the functions we have created so far belong to this namespace.\n",
     "3. Local - refers to the namespace when a function is called.\n",
-    "4. Encslosing - We'll see in later notebooks, that it is possible to create functions within classes as well as functions within functions.  In these situations, we will have an enclosing namespace.\n",
+    "4. Enclosing - We'll see in later notebooks, that it is possible to create functions within classes as well as functions within functions.  In these situations, we will have an enclosing namespace.\n",
     "\n",
     "\n",
     "![](images/namespace.png)\n",
@@ -512,8 +524,8 @@
    "id": "3c543ec6",
    "metadata": {},
    "source": [
-    "## Passing Arguments: By Reference\n",
-    "As everything is an object in Python, the langauage passes a reference to an object when it is used as an argument to a function. From a performance perspective, it would be costly to make complete copies of complex or large objects.\n",
+    "## Passing Arguments: By Object Reference\n",
+    "As everything is an object in Python, the language passes a reference to an object when it is used as an argument to a function. From a performance perspective, it would be costly to make complete copies of complex or large objects.\n",
     "\n",
     "This means that if we pass any objects that are mutable, it is possible that the function could change their internal state (e.g., add an element to a list).  As we write functions, we need to avoid unintended side effects on objects passed to us or manipulate global variables.  \n",
     "\n",
@@ -538,6 +550,24 @@
     "changeImmutableParameter(a)\n",
     "print(a)\n",
     "print(id(a))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5cb2a442",
+   "metadata": {},
+   "source": [
+    "If you [search the Internet](https://www.google.com/search?q=call+by+reference+vs+call+by+value%20python), you'll see a number of different justifications as to whether or not Python uses \"call by value\" or \"call by reference\".\n",
+    "\n",
+    "\"Call by value\"  evaluates the arguments and passes their actual values to the called function.[1]\n",
+    "\n",
+    "In \"call by reference\", the caller passes a reference (pointer) to the storage address of the actual parameter.[1]\n",
+    "\n",
+    "In some other languages, programmers can also pass the address of the actual variable to the function as well, which will then give the function an alias to that location.  Python (nor Java) does not provides access to the address of a variable which in turn just refer to objects \"somewhere in memory\".\n",
+    "\n",
+    "Others will say that Python is call by value when passing immutable objects (integers, floats, strings, tuples, etc.) because any changes made to those parameters within the function are not reflected back to the calling function.  Then they will say for mutable objects (lists, dictionaries - we'll cover this soon) that can be changed, that Python is \"call by reference\".  This is a fundamental misunderstanding and an incorrect interpretation.  In both cases, the reference to the object has been passed.\n",
+    "\n",
+    "(This digression seems overly fastidious, but it's a common interview question - the advice here is to not answer value/reference, but rather to explain how Python passes arguments by sending object references.)\n"
    ]
   },
   {
@@ -583,6 +613,23 @@
     "\n",
     "For both of these exercises, call your functions with different argumetns and print the results.\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "63a52f2b",
+   "metadata": {},
+   "source": [
+    "## References\n",
+    "[1] Alfred V. Aho, Ravi Sethi, and Jeffrey D. Ullman. 1986. _Compilers: principles, techniques, and tools_. Addison-Wesley Longman Publishing Co., Inc., USA."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cc559e0f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -601,7 +648,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
