--- a/IntroductionToPython/09-Lists.ipynb
+++ b/IntroductionToPython/09-Lists.ipynb
@@ -524,7 +524,7 @@
    "id": "af463339",
    "metadata": {},
    "source": [
-    "We can also perfor a deepcopy of a list.  A deep copy will construct a new list and then recursively create new copies off all of the original contents and place those into the new list.  (We'll cover recursion in more detail in later notebooks.)\n",
+    "We can also perform a deepcopy of a list.  A deep copy will construct a new list and then recursively create new copies off all of the original contents and place those into the new list.  (We'll cover recursion in more detail in later notebooks.)\n",
     "\n",
     "To perform a deep copy, we'll need to import the `copy` module and then call the `deepcopy()` function within that module."
    ]
@@ -778,7 +778,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
