--- a/IntroductionToPython/11-Iteration.ipynb
+++ b/IntroductionToPython/11-Iteration.ipynb
@@ -8,7 +8,7 @@
     "# Iteration\n",
     "In previous notebooks, we discussed control statements (e.g., `if`) to make decisions on which block of code to execute. \n",
     "\n",
-    "From a structured programming point of view, three basic building blocks exist to construct algorithms:ß\n",
+    "From a structured programming point of view, three basic building blocks exist to construct algorithms:\n",
     "- sequence (executing statements one after another)\n",
     "- selection (making decisions, control statements, `if`)\n",
     "- iteration (repeatedly executing parts of a program)\n",
@@ -46,6 +46,7 @@
     "    block\n",
     "```\n",
     "If the condition evaluates to `True`, then the statements in the block are executed.  After the block is execute, the entire statement repeats with evaluating the condition.  This repeats infinitely until the condition evaluates to `False` or the block causes the flow of control to break out of the while statement.\n",
+    "\n",
     "![](images/whileStatment.png)\n",
     "\n",
     "Here's a simple example that counts from 1 to 5:"
@@ -74,7 +75,7 @@
     "## Break and Continue\n",
     "As with many other programming languages, Python continues two statements that can affect the sequence of the looping from within the block (as opposed to just the condition\n",
     "\n",
-    "With the **break** statement, execution immediately exits the block and execution proceeds with the statement after the loop.\n",
+    "With the `break` statement, execution immediately exits the block and execution proceeds with the statement after the loop.\n",
     "\n",
     "In the following example, we add a check that if i is divisible by 3, we exit the loop immediately"
    ]
@@ -99,7 +100,7 @@
    "id": "b11b0c7b",
    "metadata": {},
    "source": [
-    "Rather than exiting the loop immediately, the **continue** statement exits the current loop, but resumes with executing the condition."
+    "Rather than exiting the loop immediately, the `continue` statement exits the current loop, but resumes with executing the condition."
    ]
   },
   {
@@ -449,8 +450,18 @@
    "id": "15492e66",
    "metadata": {},
    "source": [
-    "Using the above code,  use `range()` with just a stop number."
+    "Using the above code,  use `range()` with just a stop number.\n",
+    "\n",
+    "Try some more examples yourself:"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e8c9e2d9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -824,6 +835,27 @@
     "axes.axvline(mean)        # draw a vertical bar for the mean\n",
     "axes.axvline(approxiamate_median,linestyle='--')  # vertical bar for our median, dashed line\n",
     "axes.set_xlim(0, 200000)  # limit to focus on the lower returns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ae0b12df",
+   "metadata": {},
+   "source": [
+    "## Common Loop Patterns\n",
+    "- Fencepost\n",
+    "- Loop and half\n",
+    "- Processing (infinite loop/ Sentinel - stopping condition)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b307b071",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#TODO"
    ]
   },
   {
